@@ -49,33 +49,33 @@ class CascadingProfile {
 		/** Add all files from profile ans its parents to m_profile_files. */
 		void addProfile(const char *profile, unsigned int depth = 0);
 
-		/** Handler functions follow for reading a line */
-		typedef bool (CascadingProfile::*Handler)(const std::string &line);
+		/** Handler functions follow for reading a file */
+		typedef bool (CascadingProfile::*Handler)(const std::vector<std::string> &lines, const std::string &file);
 
 		/** Read all "packages" files found in profile.
 		 * Populate p_system and p_system_allowed.
 		 * @return true if data was changed */
-		bool readPackages(const std::string &line);
+		bool readPackages(const std::vector<std::string> &lines, const std::string &file);
 
 		/** Read all "package.mask" files found in profile.
 		 * Populate p_package_masks.
 		 * @return true if data was changed */
-		bool readPackageMasks(const std::string &line);
+		bool readPackageMasks(const std::vector<std::string> &lines, const std::string &file);
 
 		/** Read all "package.unmask" files found in profile.
 		 * Populate p_package_unmasks.
 		 * @return true if data was changed */
-		bool readPackageUnmasks(const std::string &line);
+		bool readPackageUnmasks(const std::vector<std::string> &lines, const std::string &file);
 
 		/** Read all "package.keywords" files found in profile.
 		 * Populate p_package_keywords.
 		 * @return true if data was changed */
-		bool readPackageKeywords(const std::string &line);
+		bool readPackageKeywords(const std::vector<std::string> &lines, const std::string &file);
 
 		/** Read all "package.accept_keywords" files found in profile.
 		 * Populate p_package_accept_keywords.
 		 * @return true if data was changed */
-		bool readPackageAcceptKeywords(const std::string &line);
+		bool readPackageAcceptKeywords(const std::vector<std::string> &lines, const std::string &file);
 	public:
 		CascadingProfile(PortageSettings *portagesettings, bool init_world) :
 			use_world(false), finalized(false),
