@@ -1,8 +1,14 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
-*eix-0.22.1
+*eix-0.22.2
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
-	- Use /etc/portage/package.nowarn instead of
+	- Improve error handling when reading profile masks
+	- Fix sqlite.cc: http://bugs.gentoo.org/show_bug.cgi?id=336896
+	- Fix sqlite automagic
+
+*EIX-0.22.1
+	MARTIN VÄTH <VAETH AT MATHEMATIK.UNI-WUERZBURG.DE>:
+	- USE /ETC/PORTAGE/PACKAGE.NOWARN INSTEAD OF
 	  /etc/portage/package.*.nowarn; the latter is now obsolete.
 	  If you want continue to use it, set OBSOLETE_NOWARN=true
 	- Support wildcards in /etc/portage/package.nowarn
